[workspace]
members = ["crates/siliconv_core"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = "deny"

[package]
name = "siliconv"
version.workspace = true
edition.workspace = true

[dependencies]
siliconv_core = { path = "crates/siliconv_core" }
